SignInForm can register user now, but without validation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "privatechat",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router": "^4.0.28",
-    "@types/react-router-dom": "^4.2.7",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "5.0.7",
+    "axios": "^0.18.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "4.0.0",
-    "styled-components": "^3.3.3",
-    "tachyons": "^4.10.0"
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "^1.1.4",
+    "redux": "^4.0.0",
+    "styled-components": "^3.4.2",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
