--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.3.9
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.0.6
+django-cors-headers==2.4.0
 djangorestframework==3.8.2
 djangorestframework-simplejwt==3.2.3
 idna==2.7
