--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --port 3000",
+    "start": "webpack-dev-server --mode development --port 3000",
     "build": "webpack --mode production"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
