--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==2.0.6
 django-cors-headers==2.4.0
+django-rest-swagger==2.2.0
 djangorestframework==3.8.2
 djangorestframework-simplejwt==3.2.3
 idna==2.7
@@ -15,10 +16,12 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+openapi-codec==1.3.2
 PyJWT==1.6.4
 pylint==1.9.2
 pytz==2018.4
 requests==2.19.1
+simplejson==3.16.0
 six==1.11.0
 uritemplate==3.0.0
 urllib3==1.23
